--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ edition = "2018"
 log = "0.4.6"
 log4rs = "1.0"
 rand = "0.7"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 termion = "1.5"
 tokio = { version = "1", features = ["full"] }
 tui = "0.14"
 webbrowser = "0.5.5"
+futures = "0.3"
