--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ htmlescape = "0.3.1"
 log = "0.4.6"
 log4rs = "1.0"
 rand = "0.7"
+regex = "1"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
